--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="index.html" class="logo">Osh<span>Estate</span></a>
-            <ul class="nav-links" id="nav-links-container"></ul>
+            
+            <ul class="nav-links" id="nav-links-container">
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="buy.html">Купить</a></li>
+                <li><a href="rent.html">Снять</a></li>
+                <li><a href="login.html">Войти</a></li>
+                </ul>
+
             <div class="menu-toggle"><i class="fas fa-bars"></i></div>
         </div>
     </nav>
@@ -47,7 +54,7 @@
                 <h3>OshEstate</h3>
                 <p data-lang="footer_text">Ваш надежный партнер.</p>
             </div>
-            <div class="footer-bottom">&copy; 2025 OshEstate.</div>
+            <div class="footer-bottom">&copy; 2026 OshEstate.</div>
         </div>
     </footer>
 
