--- a/favorites.html
+++ b/favorites.html
@@ -12,7 +12,12 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="index.html" class="logo">Osh<span>Estate</span></a>
-            <ul class="nav-links" id="nav-links-container"></ul>
+            <ul class="nav-links" id="nav-links-container">
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="buy.html">Купить</a></li>
+    <li><a href="rent.html">Снять</a></li>
+    <li><a href="login.html">Войти</a></li>
+</ul>
             <div class="menu-toggle"><i class="fas fa-bars"></i></div>
         </div>
     </nav>
@@ -41,4 +46,5 @@
 
     <script type="module" src="script.js"></script>
 </body>
+
 </html>
