--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OshEstate - Недвижимость в Оше</title>
+    
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -18,7 +22,7 @@
                 <li><a href="buy.html">Купить</a></li>
                 <li><a href="rent.html">Снять</a></li>
                 <li><a href="login.html">Войти</a></li>
-                </ul>
+            </ul>
 
             <div class="menu-toggle"><i class="fas fa-bars"></i></div>
         </div>
@@ -47,6 +51,17 @@
             </div>
         </div>
     </header>
+
+    <section class="section">
+        <div class="container">
+            <h2 class="section-title">Новые объявления</h2>
+            <div class="listings-grid" id="listings-container">
+                <div style="grid-column: 1/-1; text-align: center; padding: 40px;">
+                    <i class="fas fa-circle-notch fa-spin"></i> Загрузка...
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <div class="container footer-content">
